force-app/main/default/objects/Tax_Directive_BC_Claim_Junction__c/Tax_Directive_BC_Claim_Junction__c.object-meta.xml
<CustomObject>
    <label>Tax Directive BC Claim Junction</label>
    <nameField>
        <label>Tax Directive BC Claim Junction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Directive BC Claim Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>