force-app/main/default/objects/Tax_Directive_BC_Claim_Junction__c/fields/Benefit_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Claimed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Claimed</label>
    <referenceTo>cve__BenefitClaimed__c</referenceTo>
    <relationshipLabel>Tax Directive BC Claim Junctions</relationshipLabel>
    <relationshipName>Tax_Directive_BC_Claim_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>