force-app/main/default/objects/Tax_Directive_BC_Claim_Junction__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Directive BC Claim Junctions</relationshipLabel>
    <relationshipName>Tax_Directive_BC_Claim_Junctions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>