force-app/main/default/objects/Tax_Directive_BC_Claim_Junction__c/fields/Tax_Directive_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Directive_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Directive</label>
    <referenceTo>Tax_Directive__c</referenceTo>
    <relationshipLabel>Tax Directive BC Claim Junctions</relationshipLabel>
    <relationshipName>Tax_Directive_BC_Claim_Junctions</relationshipName>
    <type>Lookup</type>
</CustomField>